--- a/Lib/Neon.Couchbase/Neon.Couchbase.csproj
+++ b/Lib/Neon.Couchbase/Neon.Couchbase.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Couchbase</RootNamespace>
     <Authors>Jeff Lill</Authors>
-    <Version>1000.0.2-test</Version>
+    <Version>1.0.1</Version>
     <Company>neonFORGE, LLC</Company>
     <Product>Neon</Product>
     <Description>neonKUBE Couchbase client extensions.</Description>
