--- a/Lib/Neon.ModelGen/Neon.ModelGen.csproj
+++ b/Lib/Neon.ModelGen/Neon.ModelGen.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1000.0.2-test-preview</Version>
+    <Version>1.0.1-preview</Version>
     <Authors>Jeff Lill</Authors>
     <Company>neonFORGE, LLC</Company>
     <Product>Neon</Product>
