--- a/Lib/Neon.Xunit.Kube/Neon.Xunit.Kube.csproj
+++ b/Lib/Neon.Xunit.Kube/Neon.Xunit.Kube.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Xunit.Kube</RootNamespace>
     <PackageId>Neon.Xunit.Kube</PackageId>
-    <Version>1000.0.2-test-alpha</Version>
+    <Version>1.0.1-alpha</Version>
     <Authors>Jeff Lill</Authors>
     <Product>neonKUBE</Product>
     <Description>neonKUBE Neon Xunit testing helpers.</Description>
