--- a/Lib/Neon.Xunit/Neon.Xunit.csproj
+++ b/Lib/Neon.Xunit/Neon.Xunit.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Neon.Xunit</RootNamespace>
-    <Version>1000.0.2-test</Version>
+    <Version>1.0.1</Version>
     <Authors>Jeff Lill</Authors>
     <Company>neonFORGE, LLC</Company>
     <Description>Neon Xunit related extensions.</Description>
