[portable]: Fixed model project dependencies.

--- a/Test/Portable/Test.Neon.Models.Cadence/Test.Neon.Models.Cadence.csproj
+++ b/Test/Portable/Test.Neon.Models.Cadence/Test.Neon.Models.Cadence.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Neon.Common" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Test.Neon.Models.Definitions\Test.Neon.Models.Definitions.csproj" />
+  </ItemGroup>
+
 </Project>
