--- a/Test/Portable/Test.Neon.Models/Test.Neon.Models.csproj
+++ b/Test/Portable/Test.Neon.Models/Test.Neon.Models.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="Neon.Couchbase" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Test.Neon.Models.Definitions\Test.Neon.Models.Definitions.csproj" />
+  </ItemGroup>
+
   <Target Name="ModelGen" BeforeTargets="BeforeCompile">
     <Exec Command="neon version --minimum=0.6.9-alpha" />
     <Exec Command="neon generate models --target-namespace=Test.Neon.Models --persisted --debug-allow-stepinto &quot;$(SolutionDir)Test.Neon.Models.Definitions\bin\$(Configuration)\netstandard2.0\Test.Neon.Models.Definitions.dll&quot; &quot;$(ProjectDir)GeneratedTypes.cs&quot;" />
