--- a/Test/Portable/Test.Neon.Cryptography/Test.Neon.Cryptography.csproj
+++ b/Test/Portable/Test.Neon.Cryptography/Test.Neon.Cryptography.csproj
@@ -15,16 +15,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="Neon.Common" Version="1.0.1" />
-    <PackageReference Include="Neon.Cryptography" Version="1.0.1" />
-    <PackageReference Include="Neon.Xunit" Version="1.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="Neon.Common" Version="1.0.3" />
+    <PackageReference Include="Neon.Cryptography" Version="1.0.3" />
+    <PackageReference Include="Neon.Xunit" Version="1.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="coverlet.collector" Version="1.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
