--- a/Go/src/github.com/cadence-proxy/.vscode/settings.json
+++ b/Go/src/github.com/cadence-proxy/.vscode/settings.json
@@ -1,47 +1,50 @@
 {
-    // Terminals for windows
-    "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\cmd.exe",
-    "terminal.integrated.shellArgs.windows": [
-        "/k", "C:\\Program Files (x86)\\cmder_mini\\vendor\\init.bat", "/noautorun"
-    ],
-    "terminal.integrated.env.windows": {
-        "GOPATH": "C:\\Users\\johnc\\source\\repos\\nforgeio\\neonKUBE\\Go"
-    },
+  // Terminals for windows
 
-    "breadcrumbs.enabled": true,
-    
-    "editor.renderWhitespace": "all",
-    "editor.renderControlCharacters": true,
+  "terminal.integrated.shell.windows": "C:\\WINDOWS\\System32\\cmd.exe",
+  "terminal.integrated.shellArgs.windows": [
+    "/k",
+    "C:\\Program Files\\Cmder\\vendor\\init.bat",
+    "/noautorun"
+  ],
+  "terminal.integrated.env.windows": {
+    "GOPATH": "${env:NF_ROOT}\\Go"
+  },
 
-    "git.ignoreLimitWarning": true,
-    
-    "go.useLanguageServer": true,
-    "go.alternateTools": {
-        "go-langserver": "golsp",
-    },
-    "go.languageServerExperimentalFeatures": {
-        "format": false,
-        "autoComplete": true,
-        "signatureHelp": true,
-        "findReferences": true,
-        "goToDefinition": true,
-        "hover": true,
-        "workspaceSymbols": true,
-        "rename": true,
-        "goToTypeDefinition": true,
-        "diagnostics": true,
-        "documentSymbols": true,
-    },
-    "[go]": {
-        "editor.codeActionsOnSave": {
-            "source.organizeImports": false
-        },
-    },
-    "go.inferGopath": false,
-    "go.formatTool": "goimports",
-    "go.lintTool": "golint",
-    "go.lintOnSave": "package",
-    "go.buildOnSave": "off",
+  "breadcrumbs.enabled": true,
 
-    "window.zoomLevel": 0    
+  "editor.renderWhitespace": "all",
+  "editor.renderControlCharacters": true,
+
+  "git.ignoreLimitWarning": true,
+
+  "go.useLanguageServer": true,
+  "go.alternateTools": {
+    "go-langserver": "golsp"
+  },
+  "go.languageServerExperimentalFeatures": {
+    "format": false,
+    "autoComplete": true,
+    "signatureHelp": true,
+    "findReferences": true,
+    "goToDefinition": true,
+    "hover": true,
+    "workspaceSymbols": true,
+    "rename": true,
+    "goToTypeDefinition": true,
+    "diagnostics": true,
+    "documentSymbols": true
+  },
+  "[go]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": false
+    }
+  },
+  "go.inferGopath": false,
+  "go.formatTool": "goimports",
+  "go.lintTool": "golint",
+  "go.lintOnSave": "package",
+  "go.buildOnSave": "off",
+
+  "window.zoomLevel": 0
 }
