[images/cadence-dev]: Don't install CQLSH explicitly, thge correct version is installed with Cassandra already.

--- a/Images/cadence-dev/Dockerfile
+++ b/Images/cadence-dev/Dockerfile
@@ -65,8 +65,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         python-setuptools \
         build-essential \
     && rm -rf /var/lib/apt/lists/* \
-    && pip install wheel \
-    && pip install cqlsh
+    && pip install wheel
 
 # NODEJS/NPM INSTALLATION
 RUN apt-get update \
