--- a/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
+++ b/Lib/Neon.SSH.NET/Neon.SSH.NET.csproj
@@ -20,7 +20,7 @@ This is a cloned and slightly updated build of https://www.nuget.org/packages/SS
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>ssh scp sftp ssh.net</PackageTags>
     <Configurations>Debug;Release;CodeDoc</Configurations>
-    <PackageIconUrl>https://doc.neonkube.com/images/nuget-icon.png</PackageIconUrl>
+    <PackageIcon>nuget-icon.png</PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -55,10 +55,8 @@ This is a cloned and slightly updated build of https://www.nuget.org/packages/SS
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
+    <None Include="..\nuget-icon.png" Pack="true" PackagePath=""/>
+    <None Include="..\..\LICENSE" Pack="True" PackagePath=""/>
   </ItemGroup>
 
 </Project>
