#695: Activity dependency injection

--- a/Test/Test.Neon.Cadence.net/Test.Neon.Cadence.net.csproj
+++ b/Test/Test.Neon.Cadence.net/Test.Neon.Cadence.net.csproj
@@ -280,6 +280,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Test.Neon.Cadence\ActivityDependency.cs">
+      <Link>ActivityDependency.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Cadence\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
