--- a/Snippets/Temporal/Snippets.Temporal.HelloWorld/Snippets.Temporal.HelloWorld.csproj
+++ b/Snippets/Temporal/Snippets.Temporal.HelloWorld/Snippets.Temporal.HelloWorld.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Lib\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\..\..\Lib\Neon.Temporal\Neon.Temporal.csproj" />
     <ProjectReference Include="..\..\..\Lib\Neon.Xunit.Temporal\Neon.Xunit.Temporal.csproj" />
