--- a/Charts/m3db-operator/templates/serviceaccount.yaml
+++ b/Charts/m3db-operator/templates/serviceaccount.yaml
@@ -1,7 +1,5 @@
----
-# Source: m3db-operator/templates/service_account.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: m3db-operator
-  namespace: monitoring
+  name: {{ .Values.operator.name }}
+  namespace: {{ .Release.Namespace }}
