--- a/Charts/m3db-operator/templates/clusterrolebinding.yaml
+++ b/Charts/m3db-operator/templates/clusterrolebinding.yaml
@@ -1,14 +1,12 @@
----
-# Source: m3db-operator/templates/cluster_role_binding.yaml
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: m3db-operator
+  name: {{ .Values.operator.name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: m3db-operator
+  name: {{ .Values.operator.name }}
 subjects:
 - kind: ServiceAccount
-  name: m3db-operator
-  namespace: monitoring
+  name: {{ .Values.operator.name }}
+  namespace: {{ .Release.Namespace }}
