--- a/Charts/fluentd/templates/deployment.yaml
+++ b/Charts/fluentd/templates/deployment.yaml
@@ -28,6 +28,7 @@ spec:
         release: {{ .Release.Name }}
       annotations:
         checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        fluentbit.io/exclude: 'true'
         {{- if .Values.annotations }}
         {{- toYaml .Values.annotations | nindent 8 }}
         {{- end }}
@@ -43,9 +44,6 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-      {{- if and (.Values.plugins.enabled) (gt (len .Values.plugins.pluginsList) 0) }}
-        command: ["/bin/sh", "-c", "/etc/fluent/config.d/install-plugins.sh"]
-      {{- end }}
         env:
           - name: OUTPUT_HOST
             value: {{ .Values.output.host | quote }}
@@ -59,6 +57,8 @@ spec:
             value: {{ .Values.output.buffer_chunk_limit | quote }}
           - name: OUTPUT_BUFFER_QUEUE_LIMIT
             value: {{ .Values.output.buffer_queue_limit | quote }}
+          - name: LOG_LEVEL
+            value: {{ .Values.logLevel | quote }}
           {{- range $key, $value := .Values.env }}
           - name: {{ $key | quote }}
             value: {{ $value | quote }}
