added istio and geoip filters

--- a/Images/neon-log-collector/conf/filter.conf
+++ b/Images/neon-log-collector/conf/filter.conf
@@ -5,8 +5,16 @@
     @type   neon-docker
 </filter>
 
-<filter **>
+<filter kube.**>
     @type   neon-kube
+</filter>
+
+<filter kube.**>
+    @type   neon-istio
+</filter>
+
+<filter kube.**>
+    @type   neon-istio-geoip
 </filter>
 
 #------------------------------------------------------------------------------
