fluent-bit was skipping long lines, and skipping Envoy access logs

--- a/Images/neon-log-host/conf/fluent-bit-input.conf
+++ b/Images/neon-log-host/conf/fluent-bit-input.conf
@@ -1,11 +1,13 @@
 [INPUT]
-    Name             tail
-    Path             /var/log/containers/*.log
-    Parser           docker
-    Tag              kube.*
-    Refresh_Interval 5
-    Mem_Buf_Limit    64MB
-    Skip_Long_Lines  On
+    Name              tail
+    Path              /var/log/containers/*.log
+    Parser            docker
+    Tag               kube.*
+    Refresh_Interval  2
+    Mem_Buf_Limit     128MB
+    Buffer_Chunk_Size 64KB
+    Buffer_Max_Size   128MB
+    Skip_Long_Lines   Off
 
 [INPUT]
     Name              systemd
