#887: Snapd: disable auto updating (also #882)

--- a/Devops/home/tiny-xcp.cluster.yaml
+++ b/Devops/home/tiny-xcp.cluster.yaml
@@ -8,6 +8,8 @@ kubernetes:
   allowPodsOnMasters: true
 hosting:
   environment: xenserver
+  linuxDistribution: ubuntu
+  linuxVersion: 20.04.latest
   vmHostUsername: $<<XENSERVER_USERNAME>>
   vmHostPassword: $<<XENSERVER_PASSWORD>>
   vmNamePrefix: jeff
