#839: Relocated Linux distribution and version config to the cluster definition root.

--- a/Devops/home/tiny.cluster.yaml
+++ b/Devops/home/tiny.cluster.yaml
@@ -1,6 +1,8 @@
 name: home-tiny
 datacenter: sultan
 environment: development
+linuxDistribution: ubuntu
+linuxVersion: 20.04.0
 timeSources:
 - pool.ntp.org
 allowUnitTesting: true
