[devops]: Add Linux distribution and version to home cluster definitions.

--- a/Devops/home/large.cluster.yaml
+++ b/Devops/home/large.cluster.yaml
@@ -1,6 +1,8 @@
 name: home-large
 datacenter: sultan
 environment: development
+linuxDistribution: ubuntu
+linuxVersion: 20.04.latest
 timeSources:
 - pool.ntp.org
 allowUnitTesting: true
