--- a/Devops/home/small.cluster.yaml
+++ b/Devops/home/small.cluster.yaml
@@ -1,6 +1,8 @@
 name: home-small
 datacenter: sultan
 environment: development
+linuxDistribution: ubuntu
+linuxVersion: 20.04.latest
 timeSources:
 - pool.ntp.org
 allowUnitTesting: true
