--- a/Devops/home/tiny-xcp.cluster.yaml
+++ b/Devops/home/tiny-xcp.cluster.yaml
@@ -1,6 +1,8 @@
 name: tiny-xcp-home
 datacenter: sultan
 environment: development
+linuxDistribution: ubuntu
+linuxVersion: 20.04.latest
 timeSources:
 - pool.ntp.org
 allowUnitTesting: true
